<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/sv_parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lbl_title"
                style="@style/title_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Simple SnackBar"
                app:layout_constraintBaseline_creator="@android:integer/config_longAnimTime"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lbl_animation_mode"
                style="@style/label_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/animation_mode"
                app:layout_constraintTop_toBottomOf="@+id/lbl_title" />

            <RadioGroup
                android:id="@+id/rg_animation_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/lbl_animation_mode">

                <RadioButton
                    android:id="@+id/rb_fade"
                    style="@style/label_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/black"
                    android:checked="true"
                    android:gravity="center|start"
                    android:text="@string/fade"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rb_slide"
                    style="@style/label_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/black"
                    android:gravity="center|start"
                    android:text="@string/slide"
                    android:textColor="@color/black" />
            </RadioGroup>

            <TextView
                android:id="@+id/lbl_duration"
                style="@style/label_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/duration"
                app:layout_constraintTop_toBottomOf="@+id/rg_animation_mode" />

            <RadioGroup
                android:id="@+id/rg_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/lbl_duration">

                <RadioButton
                    android:id="@+id/rb_short"
                    style="@style/label_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/black"
                    android:checked="true"
                    android:gravity="center|start"
                    android:text="@string/short_duration"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rb_long"
                    style="@style/label_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/black"
                    android:gravity="center|start"
                    android:text="@string/long_duration"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rb_indefinite"
                    style="@style/label_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/black"
                    android:gravity="center|start"
                    android:text="@string/indefinite_duration"
                    android:textColor="@color/black" />
            </RadioGroup>

            <TextView
                android:id="@+id/lbl_content"
                style="@style/label_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text"
                app:layout_constraintTop_toBottomOf="@+id/rg_duration" />

            <EditText
                android:id="@+id/edt_message"
                style="@style/edit_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type_here"
                android:maxLines="1"
                app:layout_constraintTop_toBottomOf="@id/lbl_content" />

            <TextView
                android:id="@+id/lbl_backgoround"
                style="@style/label_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="textCapSentences"
                android:text="@string/background_snackbar"
                app:layout_constraintTop_toBottomOf="@id/edt_message" />

            <RadioGroup
                android:id="@+id/rg_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/lbl_backgoround">

                <RadioButton
                    android:id="@+id/rb_back_red"
                    style="@style/label_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/red"
                    android:buttonTint="@color/black"
                    android:checked="true"
                    android:gravity="center|start"
                    android:text="@string/red"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rb_back_blue"
                    style="@style/label_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/blue"
                    android:buttonTint="@color/black"
                    android:gravity="center|start"
                    android:text="@string/blue"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rb_back_yellow"
                    style="@style/label_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/yellow"
                    android:buttonTint="@color/black"
                    android:gravity="center|start"
                    android:text="@string/yellow"
                    android:textColor="@color/black" />
            </RadioGroup>

            <TextView
                android:id="@+id/lbl_text_color"
                style="@style/label_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="textCapSentences"
                android:text="@string/text_color"
                app:layout_constraintTop_toBottomOf="@id/rg_background" />

            <RadioGroup
                android:id="@+id/rg_text_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/lbl_text_color">

                <RadioButton
                    android:id="@+id/rb_text_green"
                    style="@style/label_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/green"
                    android:buttonTint="@color/black"
                    android:checked="true"
                    android:gravity="center|start"
                    android:text="@string/green"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rb_text_orange"
                    style="@style/label_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/orange"
                    android:buttonTint="@color/black"
                    android:gravity="center|start"
                    android:text="@string/orange"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rb_text_purple"
                    style="@style/label_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/purple"
                    android:buttonTint="@color/black"
                    android:gravity="center|start"
                    android:text="@string/purple"
                    android:textColor="@color/black" />
            </RadioGroup>

            <TextView
                android:id="@+id/lbl_action_color"
                style="@style/label_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="textCapSentences"
                android:text="@string/action_color"
                app:layout_constraintTop_toBottomOf="@id/rg_text_color" />

            <RadioGroup
                android:id="@+id/rg_action_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/lbl_action_color">

                <RadioButton
                    android:id="@+id/rb_action_black"
                    style="@style/label_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/black"
                    android:buttonTint="@color/white"
                    android:checked="true"
                    android:gravity="center|start"
                    android:text="@string/black"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/rb_action_white"
                    style="@style/label_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:buttonTint="@color/black"
                    android:gravity="center|start"
                    android:text="@string/white"
                    android:textColor="@color/black" />
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/show"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
